--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,9 @@
     "node": "8"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.1"
   },
