--- a/functions/package.json
+++ b/functions/package.json
@@ -17,8 +17,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
-    "firebase-functions": "^3.6.1",
-    "milligram": "^1.4.0"
+    "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
